@@ -1,13 +1,14 @@
 jalv (1.4.3) unstable;
 
   * Add -c option for setting controls from the command line
+  * Add --no-menu option for jalv.gtk
+  * Don't expose non-MIDI event ports to Jack
   * Hide controls for ports with notOnGUI property in generic UI
     (based on patch from Robin Gareus)
   * Support ui:portMap feature to allow UIs to avoid hard-coded port indices
     (useful for compatibility and separately distributed UIs)
-  * Add --no-menu option for jalv.gtk
 
- -- David Robillard <d@drobilla.net>  Wed, 25 Dec 2013 14:03:37 -0500
+ -- David Robillard <d@drobilla.net>  Fri, 27 Dec 2013 21:03:33 -0500
 
 jalv (1.4.2) stable;
 
